submit-btn styled on adding-product-form component

--- a/src/components/addingProductForm/addingProductForm.module.scss
+++ b/src/components/addingProductForm/addingProductForm.module.scss
@@ -185,6 +185,9 @@
       direction: rtl;
       font-size: large;
 
+      .submitBtn {
+        padding: 0;
+      }
       .DateInputTag,
       & > input {
         padding-right: 5px;
