--- a/src/components/addingProductForm/addingProductForm.module.scss
+++ b/src/components/addingProductForm/addingProductForm.module.scss
@@ -19,6 +19,7 @@
       flex-direction: column;
       font-family: 'Raleway-semiBoldItalic';
       justify-content: space-between;
+        margin-bottom: 30px;
 
       label {
         margin-left: 0.2rem;
