--- a/src/components/addingProductForm/addingProductForm.module.scss
+++ b/src/components/addingProductForm/addingProductForm.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   width: 100%;
   min-height: 130px;
+
   .FormTag {
     display: flex;
     justify-content: space-around;
@@ -13,13 +14,14 @@
     width: 90%;
     border-radius: 10px;
     background-color: colors.$purple-100;
+    border-bottom: solid 5px colors.$purple-500;
 
     & > div {
       display: flex;
       flex-direction: column;
       font-family: 'Raleway-semiBoldItalic';
       justify-content: space-between;
-        margin-bottom: 30px;
+      margin-bottom: 30px;
 
       label {
         margin-left: 0.2rem;
